make create new user form react controlled so it can clear on creation, make user the default permission assignment; make tables scrollable with sticky headers; fix spacing on users, add media query to users for smaller screens

--- a/src/components/SharedLayout/SharedLayout.module.scss
+++ b/src/components/SharedLayout/SharedLayout.module.scss
@@ -3,6 +3,7 @@
 
 .navBar {
   background-color: color(background, base);
+  display: flex;
   position: fixed;
   z-index: 9999;
   top: 0px;
